--- a/template/master.html
+++ b/template/master.html
@@ -91,7 +91,7 @@
             </div>
         </div>
     </nav>
-    <div class="text-center  text-white {% if type %}mt-2 py-1{% endif %} {{type}} m-auto rounded-3 " style="width: 90%;">
+    <div class="text-center  text-white {% if type %}my-2 py-1{% endif %} {{type}} m-auto rounded-3 " style="width: 90%;">
       {{message}}
     </div>
     
