--- a/template/blood_community.html
+++ b/template/blood_community.html
@@ -11,7 +11,8 @@ CCN community
       background-size: cover;
   }
   input{
-    background-color: transparent;
+    background-color: white;
+    opacity: 0.5;
     outline: none;
     padding: 4px;
     padding-left: 10px;
@@ -25,7 +26,7 @@ CCN community
 {% block content %}
 
 <div class="m-3">
-  <input class="border-2 m-3 bg-body" style="width: 30%;" type="text" id="myInput"
+  <input class="border-2 m-3" style="width: 30%;" type="text" id="myInput"
     onkeyup="myFunction()" placeholder="Search for blood group..">
   <table class="table table-success table-striped m-3" id="bloodTable"
     style="width: 98%;">
