--- a/template/login.html
+++ b/template/login.html
@@ -14,7 +14,7 @@ Login
         border: 1px solid #ccc;
         border-radius: 5px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        background-color: #f9f9f9;
+        background-color: #b7b7b77d;
     }
     /* Style for form inputs */
     .form-group {
@@ -30,27 +30,27 @@ Login
 
 <div class="container-fluid">
     <img src="../static/img/uni.jpg" style="filter: blur(5px); height: fit-content; width: 100%;">
-    <div class="row mt-4">
+    <div class="row mt-4" >
         <div class="col-md-6 mx-auto">
             <div class="form-container">
                 <h2 class="text-center">Login</h2>
                 <form action="{% url 'login' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group">
-                        <label for="username">User name</label>
+                        <label for="username" class="fw-bold my-2">User name</label>
                         <input type="text" class="form-control" id="username"
-                            name="username" required>
+                            name="username" placeholder="User name" required>
                     </div>
                     <div class="form-group">
-                        <label for="password">Password</label>
+                        <label for="password" class="fw-bold my-2">Password</label>
                         <input type="password" class="form-control"
-                            id="password" name="password" required>
+                            id="password" name="password" placeholder="Password" required>
                     </div>
                     <div style="width: 100%; text-align: center;" >
-                        <button type="submit" class="btn btn-primary btn-block">Login</button>
+                        <button type="submit" class="btn bg-linear">Login</button>
                     </div>
-                    <div style="width: 100%; text-align: center;" >
-                        <a href="/signup/">Signup</a>
+                    <div  style="width: 100%; text-align: center;" >
+                        <a class="text-black" href="/signup/">Signup</a>
                     </div>
                 </form>
             </div>
