--- a/template/signup.html
+++ b/template/signup.html
@@ -14,7 +14,7 @@ Sign Up
         border: 1px solid #ccc;
         border-radius: 5px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        background-color: #f9f9f9;
+        background-color: #b7b7b77d;
     }
     /* Style for form inputs */
     .form-group {
@@ -37,30 +37,30 @@ Sign Up
                 <form action="{% url 'signup' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group">
-                        <label for="username">User name</label>
+                        <label class="fw-bold" for="username">User name</label>
                         <input type="text" class="form-control" id="username"
-                            name="username" required>
+                            name="username" placeholder="User name" required>
                     </div>
                     <div class="form-group">
-                        <label for="email">Email</label>
+                        <label class="fw-bold" for="email">Email</label>
                         <input type="email" class="form-control" id="email"
-                            name="email" required>
+                            name="email" placeholder="Email address" required>
                     </div>
                     <div class="form-group">
-                        <label for="password">Password</label>
+                        <label class="fw-bold" for="password">Password</label>
                         <input type="password" class="form-control"
-                            id="password" name="password" required>
+                            id="password" name="password" placeholder="Password" required>
                     </div>
                     <div class="form-group">
-                        <label for="confirmPassword">Confirm Password</label>
+                        <label class="fw-bold" for="confirmPassword">Confirm Password</label>
                         <input type="password" class="form-control"
-                            id="confirmPassword" name="confirmPassword" required>
+                            id="confirmPassword" name="confirmPassword" placeholder="Confirm password" required>
                     </div>
                     <div style="width: 100%; text-align: center;" >
-                        <button type="submit" class="btn btn-primary btn-block">Signup</button>
+                        <button type="submit" class="btn bg-linear">Signup</button>
                     </div>
                     <div style="width: 100%; text-align: center;" >
-                        <a href="/login/">Login</a>
+                        <a class="text-black" href="/login/">Login</a>
                     </div>
                 </form>
             </div>
@@ -73,3 +73,4 @@ Sign Up
     }
   </script>
 {% endblock %}
+
