--- a/template/question_bank.html
+++ b/template/question_bank.html
@@ -110,7 +110,7 @@ Academic
             <input type="text" class="form-control" name="course_code" required>
           </div>
           <div class="form-group my-2">
-            <label class="form-label" for="course_name"><strong>Course Code:</strong></label>
+            <label class="form-label" for="course_name"><strong>Course Name:</strong></label>
             <input type="text" class="form-control" name="course_name" required>
           </div>
           <div class="form-group my-2">
