--- a/template/master.html
+++ b/template/master.html
@@ -68,6 +68,11 @@
                     <li class="nav-item ">
                     <a class="nav-link h4 {% if 'notice' in request.path %}active{% endif %} link-light " href="{% url 'notice' %}">Notice</a>
                     </li>
+                    {% if request.session.is_superuser %}
+                    <li class="nav-item ">
+                    <a class="nav-link h4 {% if 'manage-user' in request.path %}active{% endif %} link-light " href="{% url 'manage_user' %}">Manage User</a>
+                    </li>
+                    {% endif %}
                 </ul>
                 <ul class="navbar-nav d-flex" >
                     {% if user.is_authenticated %}
@@ -81,10 +86,10 @@
                     {% else %} 
                     
                     <li class="nav-item">
-                        <a class="nav-link h4 {% if 'login' in request.path %}active{% endif %} link-light" href="{% url 'login' %}">Login </a>
+                        <a style="font-size: 14px;" class="nav-link h4 {% if 'login' in request.path %}active{% endif %} link-light" href="{% url 'login' %}">Login </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link h4 {% if 'signup' in request.path %}active{% endif %} link-light" href="{% url 'signup' %}">Signup </a>
+                        <a style="font-size: 14px;" class="nav-link h4 {% if 'signup' in request.path %}active{% endif %} link-light" href="{% url 'signup' %}">Signup </a>
                     </li>
                     {%endif%}
                 </ul>
@@ -107,6 +112,4 @@
     </div>
 
 </body>
-
-
 </html>
