change tutorial header

--- a/template/academic_header.html
+++ b/template/academic_header.html
@@ -12,7 +12,7 @@
         <a class="nav-link {% if 'question_bank' in request.path %}active{% endif %}  ms-3 " href="{% url 'question_bank' %}">Question Bank</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link {% if 'tutorial' in request.path %}active{% endif %}  ms-3" href="{% url 'tutorial' %}">Tutorial</a>
+        <a class="nav-link {% if 'tutorial' in request.path %}active{% endif %}  ms-3" href="{% url 'tutorial' %}">Notes & Tutorial</a>
       </li>
     </ul>
   </div>
