update user manager and fix bug

--- a/template/academic_notice.html
+++ b/template/academic_notice.html
@@ -4,7 +4,7 @@
 Academic
 {% endblock %}
 {% block content %}
-{% include 'academic_header' %}
+{% include 'academic_header.html' %}
 
 <div class="row">
   <div class="col-3 col_color p-3 text-center" style="height: auto;">
