--- a/template/academic.html
+++ b/template/academic.html
@@ -4,7 +4,7 @@
 Academic
 {% endblock %}
 {% block content %}
-{% include 'academic_header' %}
+{% include 'academic_header.html' %}
 
 <div class="row">
   
